crates/pvm-storage/tests/ui/mapping_insert_requires_mut.stderr
error[E0133]: call to unsafe function `Mapping::<K, V>::new` is unsafe and requires unsafe block
 --> tests/ui/mapping_insert_requires_mut.rs:8:13
  |
8 |     let m = Mapping::<Address, U256>::new(StorageKey::from_slot(0), host);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0596]: cannot borrow `m` as mutable, as it is not declared as mutable
 --> tests/ui/mapping_insert_requires_mut.rs:9:5
  |
9 |     m.insert(&Address([0xAA; 20]), &U256::from(42));
  |     ^ cannot borrow as mutable
  |
help: consider changing this to be mutable
  |
8 |     let mut m = Mapping::<Address, U256>::new(StorageKey::from_slot(0), host);
  |         +++
